# LLM-Pruner

./: .gitignore  README.md  git.sh  hf_upload.py  latency.sh  llama3.py  merge.py  merge.sh  merge_upload.py  post_training.py  prune.py  prune_v1.py  requirement.txt  requirements.txt  requirements_vllm.txt  s1.sh  s1_2.sh  s1_score.py  save_eval.sh  test_s1.sh  test_s1_2.sh  test_speedup.py  upload_model.py
data/: gsm8k_test.csv
llm-efficient/: README.md  pyproject.toml  requirements.txt
llm-efficient/examples/: eval_custom.sh  eval_sft_pruned.sh  run_sft_custom.sh  run_sft_pruned.sh
llm-efficient/examples/Llama-3.2-1B/: prune_ch.sh  prune_ch_mlp.sh  prune_ch_mlp_attn.sh  prune_mlp.sh  prune_mlp_attn.sh
llm-efficient/examples/Minitron-2B/: compute_score_depth.sh  prune_ch_mlp.sh  prune_depth.sh  prune_mlp.sh
llm-efficient/examples/Qwen2.5-1.5B/: prune_ch_mlp_attn.sh  prune_mlp.sh
llm-efficient/examples/SmolLM2-360M/: compute_score_depth.sh  prune_ch.sh  prune_ch_mlp.sh  prune_ch_mlp_attn.sh  prune_depth.sh  prune_mlp.sh  prune_mlp_attn.sh
llm-efficient/examples/dynamic_batching/: run_target_loss.sh  run_train.sh
llm-efficient/llm_efficient/depth_pruning/: skip_metric.py
llm-efficient/llm_efficient/dynamic_batching/: custom_trainer.py  dynamic_batching.py
llm-efficient/scripts/: eval_sft_pruned.py  plot_eval.py  prune_width.py  run_sft_custom.py  run_sft_pruned.py
llm-efficient/scripts/depth_pruning/: compute_importance_score.py  prune_depth.py
llm-efficient/scripts/dynamic_batching/: calculate_target_loss.py  run_sft_dynamic_batch.py
(+210 files in other folders)
